# ti-c2000-cmake-meson

./: .ccsproject  .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  build.bat  meson.build
platform/ti_c2000_tms320f280039c/: build.bat  build_cmake.bat  build_meson.bat  toolchain_for_cmake.cmake  toolchain_for_meson.ini
platform/ti_c2000_tms320f280039c/script/rom_directive/: minimal_f280039.hexcmd
platform/ti_c2000_tms320f280039c/src/device/: device.c  device.h
script/: search_h.bat
script/search/: search_asm.bat  search_c.bat
src/: main.c  main.h
src/bsw/drv/: drv_gpio.c  drv_gpio.h  drv_int.c  drv_int.h  drv_mcu.c  drv_mcu.h  drv_sys.c  drv_sys.h  drv_timer.c  drv_timer.h
src/bsw/mcu/: mcu.h  mcu_ctl.h  mcu_dependency.h  mcu_gpio.h  mcu_int.c  mcu_int.h  mcu_timer.c  mcu_timer.h
src/bsw/os/: os.c  os.h  os_freertos.c  os_freertos.h
src/bsw/os/freertos/: FreeRTOSConfig.h
src/bsw/os/freertos/kernel/port/: port.c  portmacro.h
src/bsw/typedef/: typedef.h
targetConfigs/: TMS320F280039C.ccxml
